--- a/SOCAR/css/socar.css
+++ b/SOCAR/css/socar.css
@@ -5,6 +5,18 @@
     --font-gray: #AAAAAA;
     --font-footer-light: #C5C8Ce;
     --font-footer-dark: #646F7C;
+    --background-color-gray:#f7f8f9;
+    --footer-background-color:#28323C;
+}
+
+@font-face {
+    font-family: 'Happiness-Sans-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/Happiness-Sans-Bold.woff2') format('woff2');
+    font-style: normal;
+}
+
+html{
+    font-family: 'Happiness-Sans-Bold';
 }
 
 header {
@@ -93,7 +105,7 @@ h1 figure {
     font-size: 40px;
     color: var(--font-black);
     font-weight: 900;
-    position: relative;
+    position: relative; 
 }
 
 .introduce-title::after {
@@ -118,9 +130,117 @@ h1 figure {
 
 #introduce figure {
     margin-top: 40px;
-    
 } 
-span{
+
+#now-start{
+    background-color: var(--background-color-gray);
+    height: 444px;
+    position: relative;
+    overflow: hidden;
+}
+
+#now-start > p {
+    font-size: 36px;
+    font-weight: 300;
+    color: var(--font-gray);
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.count-up {
     color: var(--main-color);
 }
-    
+
+#now-start .accent {
+    color: var(--main-color);
+}
+
+#now-start::after {
+    display: block;
+    content: '';
+    height: 100%;
+    width: 30%;
+    background-color: var(--main-color);
+    transform: skewX(-30deg);
+    position: absolute;
+    right: -200px;
+}
+
+footer {
+    background-color: var(--footer-background-color);
+}
+
+.footer-container {
+    width: 980px;
+    margin: 0 auto;
+    padding-top: 48px;
+    padding-bottom: 96px;
+}
+
+
+.sns-icons {
+    overflow: hidden;
+}
+
+.sns-icons li {
+    float: left;
+    margin-right: 12px;
+}
+
+.footer-nav{
+    overflow: hidden;
+    margin-top: 24px;
+}
+
+.footer-nav li{
+    float: left;
+    margin-right: 24px;
+}
+
+.footer-nav a {
+    color: var(--font-footer-light);
+}
+
+.footer-nav .accent{
+    color: #fff;
+}
+
+.corp-area {
+    overflow: hidden;
+    margin-top:24px;
+    font-size: 14px;
+    color:var(--font-footer-dark)
+}
+
+.corp-area > ul {
+    float: left;
+    width: 50%;
+}
+
+.corp-area li {
+    margin-bottom: 8px;
+}
+
+.corp-area dl {
+    overflow: hidden;
+}
+
+.corp-area dl > * {
+    float: left;
+}
+
+.corp-area dt {
+    margin-right: 4px;
+}
+
+.corp-area dt::after {
+    content: '.';
+}
+
+.corp-right a{
+    color: var(--font-footer-light);
+    text-decoration: underline;
+}
