--- a/BAND/CSS/reset.css
+++ b/BAND/CSS/reset.css
@@ -45,13 +45,20 @@ table {
 a {
 	text-decoration: none;
     color: inherit;
+	display: block;
 }
 
 *{
 	box-sizing: border-box;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 div {
 	display: block;
 }
+
+body {
+	font-size: 14px;
+    font-weight: 400;
+}
+
