--- a/BAND/CSS/band.css
+++ b/BAND/CSS/band.css
@@ -73,8 +73,10 @@ h1 {
 
 .main-box {
     display: flex;
-    width: 1000px;
+    width: 100%;
     margin: 0 auto;
+    justify-content:center;
+    padding-left: 10px;
 }
 .main-left {
    margin: 0 50px 0 0 ;
@@ -194,7 +196,6 @@ h1 {
 }
 
 .intro p {
-    width: 650px;
     margin: 18px auto 0;
     font-size: 16px;
     font-weight: 400;
@@ -218,8 +219,275 @@ h1 {
     text-align: left;
     margin: 0 25px;
 }
+
 .intro-image img {
     width: 100%;
-    vertical-align: top;
+    vertical-align: top;    
+}
+
+.intro-explanation {
+    margin-top: 16px;
+}
+
+.intro-explanation h3 {
+    font-size: 24px;
+    font-weight: 500;
+    color: #222;
+}
+
+.intro-explanation p {
+    font-size: 15px;
+    font-weight: 400;
+    color: #444;
+    margin-top: 6px;
+    line-height: 1.6;
+    text-align: left;
+}
+
+
+.various-band-inner {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.band-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-title {
+    margin-top: 46px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.band-wrapper h2 {
+    font-size: 24px;
+    color: #222;
+    width: 1000px;
+}
+
+
+.band-list {
+    margin: 25px 0 24px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 1000px;
+}
+
+.band-list li {
+    width: 50%;
+    display: flex;
+}
+
+.band-box img {
+    display: block;
+    width: 100%;
+}
+
+.band-box figure {
+    width: 100px;
+}
+
+.band-introduce .band-title {
+    font-size: 14px;
+    font-weight: 600;
+    color: #222;
+    padding-top: 3px;
     
 }
+
+.band-introduce {
+    margin: 10px;
+}
+.band-introduce .band-text {
+    margin-top: 5px;
+    font-size: 13px;
+    font-weight: 400;
+    color: #666;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.band-introduce .viewmore {
+    margin-top: 7px;
+    display: inline-block;
+    height: 26px;
+    padding: 0 10px 0 9px;
+    background: #fff;
+    border: 1px solid #e1e1e1;
+    border-radius: 100px;
+    line-height: 23px;
+    font-size: 12px;
+    font-weight: 400;
+    color: #777;
+}
+
+.viewmore .band-type {
+    font-weight: bolder;
+    color: #333;
+}
+.band-wrapper {
+    background-color: #eef0f3;
+    background-size: contain;
+    height: 715px;
+    display: flex;
+}
+
+.band-introduce p {
+    margin-top: 4px;
+    line-height: 1.5;
+    font-size: 12px;
+    font-weight: 400;
+    color: #999;
+}
+
+
+.app {
+    width: 1000px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    padding: 30px 0 33px; 
+    position: relative;
+}
+
+.app-right {
+    position: absolute;
+    right: 50px;
+    display: flex;
+}
+.app .app-icon {
+    background-image: url(../img/spr_intro_2x.png);
+    background-size: 231px auto;
+    background-position: -161px 0;
+    width: 70px;
+    height: 70px;
+    margin-right: 20px;
+}
+
+.app .app-explanation {
+    padding-top: 9px;
+    font-size: 23px;
+    color: #222;
+
+}
+
+.app .app-explanation p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #666;
+    margin-top: 9px;
+}
+
+.app-right .google-play {
+    width: 160px;
+    height: 47px;
+    background-size: 231px auto;
+    background-image: url(../img/spr_intro_2x.png);
+    background-position: 0 0;
+    margin-right: 10px;
+    
+}
+.app-right .app-store {
+    width: 160px;
+    height: 47px;
+    background-size: 231px auto;
+    background-image: url(../img/spr_intro_2x.png);
+    background-position: 0 -48px;
+}
+
+.cookie-wrapper {
+    background-color: rgba(34, 34, 34, 0.96);
+    width: 100%;
+    height: 50px;
+}
+
+.cookie {
+    margin: 0 auto;
+    width: 1034px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cookie-wrapper .cookie .cookie-explain {
+    padding-right: 7px;
+    font-size: 14px;
+    color: #fff;
+}
+
+.cookie-explain .cookie-link {
+    text-decoration: underline;
+    display: inline-block;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.cookie-explain .cookie-link:hover {
+    text-decoration: none;
+}
+
+
+.cookie-button button{
+    padding: 0 12px;
+    height: 26px;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #fff;
+    border: 0px;
+}
+
+.cookie-no {
+    background-color: #999;
+}
+
+.cookie-yes {
+    background-color: #0dcb67;
+}
+
+footer {
+    min-width: 1000px;
+    min-height: 120px;
+    background-color: #2a3038;
+}
+
+.footer-menu {
+    width: 1000px;
+    margin: 0 auto;
+}
+.footer-menu a {
+    color: #777;
+    font-size: 13px;
+    font-weight: 400;
+    display: inline-block;
+    margin-top: 23px;
+}
+
+.footer-menu .effect::after {
+    content: '•';
+    margin-left: 2px;
+}
+
+.footer-menu .accent::after {
+    content: '•';
+    margin-left: 2px;
+}
+.copy {
+    font-size: 13px;
+    font-weight: 500;
+    color: #b3b3b3;
+    margin-top: 10px;
+}
+
+.footer-menu .accent {
+    color: #b3b3b3;
+    font-weight: bolder;
+}
+
